fixed the issue of onclick dropdown, add bg color on hover for dropdown, index page responsive and fixed the issue of horizontal scroll bar

--- a/pawtectProject/pawtectApp/assets/style/pawtect/less/parts/components/responsive.less
+++ b/pawtectProject/pawtectApp/assets/style/pawtect/less/parts/components/responsive.less
@@ -4,6 +4,11 @@
   body {
     font-size: @font-size-small;
   }
+  .container,
+  .wrapper {
+    padding-left: @space;
+    padding-right: @space;
+  }
   .tab-head-secondary {
     li {
       padding: 5px 0;
@@ -250,6 +255,9 @@
   //my vetcoins statement mobile responsive end
 
   //my proposal mobile responsive start
+  #u-mob-bottom-pay-button {
+    display: block;
+  }
   .my-proposal-top-para {
     font-size: @font-size;
   }
@@ -298,6 +306,8 @@
   .my-proposal-plan-content {
     padding: @space * 2 @space @space * 4;
     border-top: 1px solid #f8f8f8;
+    height: 90%;
+    overflow-y: auto;
   }
   .open-payment-slider {
     height: 100%;
@@ -307,7 +317,7 @@
       opacity: 1;
       height: 100%;
       padding-top: 137px;
-      overflow-y: auto;
+      overflow: hidden;
     }
   }
   .close-payment-slider-btn {
@@ -327,6 +337,11 @@
   }
   .u-proposal-amt-col-wrap {
     padding-right: 0px;
+  }
+  .input-cancel-btn {
+    width: 20px !important;
+    border-radius: 50px !important;
+    line-height: 6px !important;
   }
   //my proposal mobile responsive end
 
@@ -401,6 +416,11 @@
 @media (min-width: 768px) and (max-width: 991px) {
   body {
     font-size: @font-size - 1;
+  }
+  .container,
+  .wrapper {
+    padding-left: @space;
+    padding-right: @space;
   }
   .btn {
     .button-size(8px; 16px; @font-size - 1; 1.3; 4px);
@@ -539,6 +559,12 @@
     padding-left: @space * 2;
     padding-right: @space * 2;
     text-align: center;
+  }
+  #u-mob-bottom-pay-button {
+    display: none;
+  }
+  .my-proposal-tab-list {
+    
   }
   //my proposal tab responsive end
 } // @media - tab
