--- a/pawtectProject/pawtectApp/assets/style/pawtect/less/parts/components/utility.less
+++ b/pawtectProject/pawtectApp/assets/style/pawtect/less/parts/components/utility.less
@@ -1,7 +1,7 @@
 //
 // Utility classes
 // --------------------------------------------------
-  
+
 .absolute-center {
   margin: auto;
   position: absolute;
@@ -68,6 +68,10 @@
     bottom: 0px;
     margin-left: auto;
     margin-right: auto;
+  }
+  &.bottom-right {
+    bottom: 0px;
+    right: 0px;
   }
 }
 // Floats
